# WPHerd

./: .gitignore  CHANGELOG.md  INSTALLATION_GUIDE.md  LICENSE  README.md  fix-wpherd.sh  index.html  package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx  commandExecutor.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
